--- a/biblio.bib
+++ b/biblio.bib
@@ -2,6 +2,33 @@
 % Introduction
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
+@inproceedings{Iosup2008,
+ author = {Iosup, Alexandru and Sonmez, Ozan and Anoep, Shanny and Epema, Dick},
+ title = {The Performance of Bags-of-tasks in Large-scale Distributed Systems},
+ booktitle = {Proceedings of the 17th International Symposium on High Performance Distributed Computing},
+ series = {HPDC '08},
+ year = {2008},
+ isbn = {978-1-59593-997-5},
+ location = {Boston, MA, USA},
+ pages = {97--108},
+ numpages = {12},
+ acmid = {1383435},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {bags-of-tasks, batches of jobs, large-scale distributed systems, multi-cluster systems, performance evaluation, prediction, scheduling, trace-based simulation, workload modeling},
+} 
+
+
+@INPROCEEDINGS{Sun2003,
+author={Xian-He Sun and Wu, Ming},
+booktitle={Parallel and Distributed Processing Symposium, 2003. Proceedings. International},
+title={Grid Harvest Service: a system for long-term, application-level task scheduling},
+year={2003},
+month={April},
+pages={8 pp.-},
+ISSN={1530-2075},}
+
+
 
 @article{Ma:2014:GDB:2560969.2561388,
  author = {Ma, Yinglong and Zhang, Xiaolan and Lu, Ke},
